# mpt_cs3

./: latin_sample.py  main.py  pyproject.toml
results/: result_0.csv
