[project]
name = "mpt-cs3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ax-platform>=1.2.3",
    "bayesian-optimization>=3.2.0",
    "numpy>=2.4.2",
    "plotly>=6.6.0",
    "polars>=1.38.1",
    "scipy>=1.17.1",
]
